--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -8,3 +8,8 @@
 #     command: "SoftDeletedRecord.due.delete_all"
 #     priority: 2
 #     schedule: at 5am every day
+
+production:
+  generate_prompts:
+    class: GeneratePromptJob
+    schedule: at 12am every day
